--- a/app/src/main/res/layout/fragment_verify.xml
+++ b/app/src/main/res/layout/fragment_verify.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:gravity="center"
     android:paddingLeft="16dp"
     android:paddingRight="16dp">
 
@@ -11,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Enter 6-digit Number"
+        android:textSize="32dp"
         android:inputType="number" />
 
     <Button
@@ -30,6 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Argon2 hash: "
+        android:textSize="32dp"
         android:layout_marginTop="0dp"/>
 
 </LinearLayout>
