--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         app:tabIndicatorColor="@android:color/holo_blue_light"
         app:tabSelectedTextColor="@android:color/holo_blue_light"
-        app:tabTextColor="@android:color/black"
+        app:tabTextColor="@android:color/holo_orange_light"
         tools:ignore="MissingConstraints" />
 
     <androidx.viewpager2.widget.ViewPager2
